fix: prayer map overflow issue

--- a/css/prayer-map.css
+++ b/css/prayer-map.css
@@ -137,8 +137,7 @@
   background: #fff;
   border-radius: 0.75rem;
   overflow: hidden;
-  max-width: 500px;
-  width: 100%;
+  width: fit-content;
   max-height: 90vh;
   display: flex;
   flex-direction: row;
@@ -164,6 +163,7 @@
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
+  flex-grow: 1;
 }
 
 .prayer-map-modal__name {
